# qc-prompts-from-deepSeek-r1

./: README.md  pyproject.toml
app/: main.py  test.py
app/utils/: logger.py
